tests/invalid/Continue_Invalid_2.whiley
function f(int x) -> int:
    while x > 0:
        continue
        x = x + 1
    return 0
